style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --sidebar-background-color: #38bdf8;
    --button-background-color: var(--sidebar-background-color);
    --main-background-color: #d1d5db;
}

body {
    height: 100vh;
    display: grid;
    grid-template-columns: 1fr 5fr;
    grid-template-rows: 1fr 3fr;
    font-family: Roboto, sans-serif;
}

.sidebar-container {
    background-color: var(--sidebar-background-color);
    grid-column: 1 / 2;
    grid-row: 1 / 3;
    display: grid;
    grid-template-rows: 100px 2fr 5fr;
    font-size: 1.5rem;
    padding: 0px 32px;
    align-items: start;
    gap: 32px;
    color: #ffffff;
    font-weight: bold;
}

.sidebar-container p {
    display: grid;
    grid-template-columns: 1fr 10fr;
    gap: 16px;
    align-items: center;
}

.sidebar-container img {
    width: 1.5rem;
}

.logo-container {
    align-self: center;
    font-size: 2rem;
}

.logo-container img {
    width: 3rem;
}

.primary-container,
.secondary-container {
    display: grid;
    gap: 8px;
}

.header-container {
    grid-column: 2 / 3;
    display: grid;
    align-items: center;
    font-size: 1.5rem;
    padding: 16px;
}

.upper-header-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 32px;
}

.upper-header-container img {
    width: 1.5rem;
}

.upper-header-container > div {
    display: grid;
    align-items: center;
}

.search-container {
    grid-template-columns: auto 1fr;
    gap: 8px;
}

.search-container input,
button {
    border-radius: 25px;
}

.search-container input {
    height: 2rem;
    background-color: lightgrey;
    outline: none;
    border: none;
}

.search-container img {
    justify-self: end;
}

.profile-container {
    display: grid;
    grid-template-columns: min-content min-content 1fr;
    gap: 32px;
    justify-self: end;
    font-weight: bold;
}

.profile-avatar {
    width: 50px;
    height: 50px;
}

.profile-avatar,
.greeting-profile-avatar {
    background-color: lightgrey;
    border-radius: 50%;
}

.greeting-profile-avatar {
    width: 75px;
    height: 75px;
    grid-row: 1 / 3;
    margin-right: 16px;
}

.lower-header-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
}

.greeting-container {
    display: grid;
    grid-template-columns: auto 1fr;
    grid-template-rows: 1fr 1fr;
    align-items: center;
    font-weight: bold;
    font-size: 1rem;
}

.greeting-container p:last-child {
    font-size: 1.5rem;
}

.profile-button-container{
    justify-self: end;
    display: grid;
    grid-template-columns: auto auto auto;
    gap: 32px;
}

button {
    background-color: var(--button-background-color);
    color: white;
    height: 50px;
    width: 120px;
    border: none;
    font-weight: bold;
    font-size: 1.25rem;
}

.main-container {
    background-color: var(--main-background-color);
    grid-column: 2 / 3;
    display: grid;
    grid-template-columns: 3fr 1fr;
    padding: 32px;
    gap: 32px;
}

.main-projects-container {
    grid-row: 1 / 3;
    display: grid;
    grid-template-rows: auto 1fr;
}

.cards-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 16px;
}

.card {
    border-left: 10px solid #ffa500;
    height: 250px;
    grid-template-rows: repeat(2, auto) 1fr;
    gap: 8px;
    padding: 16px;
}

.card p:first-of-type,
.announcement p:first-of-type {
    font-weight: bold;
    font-size: 1.2rem;
}

.card p:last-of-type,
.announcement p:last-of-type {
    color: #808080;
}

.card-icons {
    align-self: end;
    justify-self: end;
    display: grid;
    grid-template-columns: repeat(3, auto);
    gap: 16px;
}

.card-icons img {
    width: 24px;
}

.card,
.announcements-container,
.trending-container {
    background: #ffffff;
    border-radius: 10px;
    display: grid;
}

.cards-container,
.announcements-container,
.trending-container {
    margin-top: 8px;
}

.announcements-container {
    display: grid;
    padding: 16px;
    gap: 16px;
}

.announcement {
    padding-top: 6px;
    border-top: 1px solid #808080;
}

.announcement:first-of-type {
    border: none;
}

.trending-container {
    gap: 16px;
    padding: 16px;
}

.trending {
    display: grid;
    align-items: center;
    grid-template-columns: auto 1fr;
}

.trending p:last-of-type {
    color: #808080;
}

.profile-avatar {
    grid-row: 1 / 3;
    margin-right: 16px;
}

